# FittingAlgorithms

./: .gitignore  CMakeLists.txt  README.md  environment.yml  setup.py
.github/workflows/: ci.yml
Examples/: Example.py  ExampleGN  ExampleGN.cpp  ExampleGNScalar.py  ExampleGNVectorial.py  ExamplePT  ExamplePT.cpp  ExamplePTScalar.py  ExamplePTVector.py
Tests/: CMakeLists.txt  test_GaussNewton.cpp  test_ParallelTempering.cpp
cmake/: fittingalgorithmsConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst
include/: GaussNewton.h  ParallelTempering.h  costFunctions.h  defines.h
python_bindings/: GaussNewtonWrapper.cpp
src/: CMakeLists.txt  FittingAlgorithms.h  GaussNewton.cpp  GaussNewton.h  GaussNewton_detail.h  GaussNewton_utils.h  ParallelTempering.cpp  ParallelTempering.h  ParallelTempering_detail.h  matrixAlgebra.h
src/utils/: costFunctions.cpp  costFunctions.h  defines.h  randomNumbers.h
wrappers/: FittingAlgorithmsWrapper.cpp  GaussNewtonWrapper.cpp  GaussNewtonWrapper.h  ParallelTemperingWrapper.cpp  costFunctionsWrapper.h  registerDefinitions.h  wrapperUtils.h
wrappers/python/: setup.py
wrappers/python/src/: GaussNewtonWrapper.cpp  ParallelTemperingWrapper.cpp
wrappers/utils/: costFunctionsWrapper.cpp  costFunctionsWrapper.h
